Add POST /token for authenticating users
